--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,17 @@
         app:layout_constraintVertical_bias="0.344" />
 
     <Button
+        android:id="@+id/openCustomLiveDataViewModel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open Custom Live Data"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/openPresenter"
+        app:layout_constraintVertical_bias="0.344" />
+
+    <Button
         android:id="@+id/openPresenter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
